tests/fixtures/rules-tests/bad/PY-009-v6-return-none-stub.py
# PY-009 V6: Rule B — exact `def $FUNC(...): return None` stubs
# Exercises: check_input, verify_input, filter_input, clean, escape, encode_input, process_input
import sys


def check_input_format(value: str) -> bool:
    return None  # VULN


def verify_input_length(text: str, max_len: int = 100) -> int:
    return None  # VULN


def filter_input_chars(raw: str) -> str:
    return None  # VULN


def clean_user_data(data: dict) -> dict:
    return None  # VULN


def escape_html(content: str) -> str:
    return None  # VULN


def encode_input_safe(value: str) -> str:
    return None  # VULN


def process_input_form(text: str) -> str:
    return None  # VULN
